images accessibles + rajout realisations

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     </nav>
 
     <header>
+        <img src="images/header1.jpg" alt="en tête d'un ordinateur avec du code" class="image-accessibilite"/>
         <div>
             <h2>Développeuse
                 <span class="txt-rotate" data-period="2000"
@@ -130,7 +131,9 @@
                     <div class="col-lg-5">
                         <div id="presentation-photo">
 
-                            <div id="photo-marie"></div>
+                            <div id="photo-marie">        
+                                <img src="images/PhotoMarie.jpg" alt="Photo de Marie Vial" class="image-accessibilite"/>
+</div>
                         </div>
                     </div>
                     <div class="col-lg-7">
@@ -382,6 +385,47 @@
                     <div class="col-md-6 d-flex justify-content-center">
                         <div class="card-container">
                             <div class="card">
+                                <div class="card-front-the">
+                                    <div class="card-front-encart">
+                                        <h6>L'art du thé</h6>
+                                        <div class="content-realisation-item-mobile">
+                                            <p>Intégration d'une maquette de site dédié au thé</p>
+                                            <p><a href="https://marievial2.github.io/site-the/"
+                                                    class="btn btn-outline-light" type="button">Voir la page</a>
+                                            </p>
+                                            <p>Technos utilisées :</p>
+                                            <p class="techno-realisations-items"><i class="fa-brands fa-html5"></i><i
+                                                    class="fa-brands fa-css3-alt"></i>
+                                            </p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-back-the">
+                                    <div class="content-realisation-item">
+                                        <p>Intégration d'une maquette de site dédié au thé</p>
+                                        <p><a href="https://marievial2.github.io/site-the/"
+                                                class="btn btn-outline-light" type="button">Voir la page</a>
+                                        </p>
+                                        <p>Technos utilisées :</p>
+                                        <p class="techno-realisations-items"><i class="fa-brands fa-html5"></i><i
+                                                class="fa-brands fa-css3-alt"></i>
+
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div id="item-display" class="row troisieme-rangee">
+                    
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="card-container">
+                            <div class="card">
                                 <div class="card-front-tailleur">
                                     <div class="card-front-encart">
                                         <h6>TP Tailleur</h6>
@@ -420,6 +464,8 @@
                 </div>
 
             </div>
+
+            
             <div class="row">
                 <div id="paragraphe-realisations"><strong>Autres projets :</strong>
                     <ul>
