modif accessibilite texte mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -154,8 +154,7 @@
                                 <strong>stimulante</strong>.
                                 Aujourd'hui, je recherche un <strong>stage de fin d'année </strong>(niveau BUT2) et,
                                 idéalement, une <strong>alternance </strong>pour la rentrée universitaire prochaine.
-                                <strong>N'hésitez pas à me
-                                    contacter !</strong>
+                                <strong>N'hésitez pas à me contacter !</strong>
                             </p>
                             <div id="boutons-presentation">
                                 <a class="btn btn-outline-dark" href="mailto:vial.marie16@gmail.com" role="button">Me
@@ -423,7 +422,7 @@
             <div id="item-display" class="row troisieme-rangee">
 
                 <div class="col-md-12 d-flex justify-content-center">
-                    <div class="card-container">
+                    <div class="card-container tailleur">
                         <div class="card">
                             <div class="card-front-tailleur">
                                 <div class="card-front-encart">
@@ -560,7 +559,7 @@
                             <p><strong>SQL - PL/SQL</strong></p>
                             <p>Modélisation <strong>UML, Merise</strong></p>
                             <p><strong>Qualité de développement</strong> : test unitaires, bonnes pratiques</p>
-                            <p>Maquettage, référencement SEO</p>
+                            <p>Maquettage, référencement SEO, accessibilité</p>
                             <p><strong>Culture informatique</strong> : réseaux, architecture des ordi,
                                 programmation
                                 système...</p>
